Add brief personal information

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello world!
+Personal webpage of Homero Esmeraldo
+
+Soon to begin PhD In Cognitive Science at University of California San Diego
+2020 MSc in Physiology, Anatomy and Genetics at University of Oxford, United Kingdom
+2013 BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil
