--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-Personal webpage of Homero Esmeraldo
+<h1>Personal webpage of Homero Esmeraldo</h1>
 
-Soon to begin PhD In Cognitive Science at University of California San Diego
-2020 MSc in Physiology, Anatomy and Genetics at University of Oxford, United Kingdom
-2013 BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil
+<p>Soon to begin PhD In Cognitive Science at University of California San Diego</p>
+<p>2020 MSc in Physiology, Anatomy and Genetics at University of Oxford, United Kingdom</p>
+<p>2013 BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil</p>
