--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Personal webpage of Homero Esmeraldo</h1>
-
-<p>Soon to begin PhD In Cognitive Science at University of California San Diego</p>
-<p>2020 MSc in Physiology, Anatomy and Genetics at University of Oxford, United Kingdom</p>
-<p>2013 BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil</p>
+<p> Hi, welcome!</p>
+<p>Soon to begin -  PhD in Cognitive Science at University of California San Diego, USA. Supervision: Prof. Marcelo Mattar</p>
+<p>2020 - MSc in Physiology, Anatomy and Genetics at University of Oxford, UK. Supervision: Profs. Tim Vogels and Sanjay Manohar. Topic: Unsupervised and reward-modulated plasticity learning rules to form a generalisation-apt rate network</p>
+<p>2013 - BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil</p>
