--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <h1>Personal webpage of Homero Esmeraldo</h1>
+<img src="homero-garden-2020.jpg" alt="Homero's picture" width="180">
 <p>Hello, welcome! Here's a brief description of my academic career positions:</p>
-<p>To start in September 2020 -  PhD in Cognitive Science at University of California San Diego, USA.</p>
-<p>2020 - MSc in Physiology, Anatomy and Genetics at University of Oxford, UK. Supervision: Profs. Tim Vogels and Sanjay Manohar. Topic: Unsupervised and reward-modulated plasticity learning rules to form a generalisation-apt rate network</p>
-<p>2013 - BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil</p>
+<p><b>September 2020 - present</b></br>PhD in Cognitive Science at University of California San Diego, USA.</p>
+<p><b>2020</b></br>MSc in Physiology, Anatomy and Genetics at University of Oxford, UK. Supervision: Profs. Tim Vogels and Sanjay Manohar.</br>Topic: Unsupervised and reward-modulated plasticity learning rules to form a generalisation-apt rate network</p>
+<p><b>2013</b></br>BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil</p>
 
 <h3>Contact:</h3>
 <p>Email: homerobse@gmail.com</p>
