Add project descriptions to main page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <h1>Personal webpage of Homero Esmeraldo</h1>
 <img src="homero-garden-2020.jpg" alt="Homero's picture" width="180">
 <p>Hello, welcome! Here's a brief description of my academic career positions:</p>
-<p><b>September 2020 - present</b></br>PhD in Cognitive Science at University of California San Diego, USA.</p>
-<p><b>2020</b></br>MSc in Physiology, Anatomy and Genetics at University of Oxford, UK. Supervision: Profs. Tim Vogels and Sanjay Manohar.</br>Topic: Unsupervised and reward-modulated plasticity learning rules to form a generalisation-apt rate network</p>
+<p><b>September 2020 - present</b></br>
+PhD in Cognitive Science at University of California San Diego, USA.</br>
+Supervisors: Profs. Marcelo Mattar and Terrence Sejnowski</br>
+Topic: Modeling mechanisms and computational principles of hippocampal memory replay
+</p>
+
+<p><b>2020</b></br>
+MSc by Research in Physiology, Anatomy and Genetics at University of Oxford, UK.</br>
+Supervisors: Profs. Tim Vogels and Sanjay Manohar.</br>
+Topic: Unsupervised and reward-modulated plasticity learning rules to form a generalisation-apt rate network</p>
+
 <p><b>2013</b></br>BSc in Computer Engineering at Instituto Tecnológico de Aeronáutica, Brazil</p>
 
+<h3>Neuroscience Projects:</h3>
+<p>
+<b>2017-2020 - MSc by Research at the University of Oxford</b></br>
+Developed neural plasticity mechanisms involved in generalization tasks. Using neural networks, I designed plasticity rules that determine how connection weights change during learning. I showed that combining a non-linear Hebbian learning rule in the input connections, with reward-modulated learning in the output ones allowed the right connectivity for the task to emerge. The results predict a reorganization of recurrent activity flow across training by potentiating feedforward and feedback connections in hippocampal-entorhinal stimulus pathways and reward-dependent plasticity to form connections to response neurons. My model bridges the gap between conceptual models of generalization and how to learn them through biologically plausible plasticity rules.
+</p>
+
+<p>
+<b>2019 - Prof. César Rennó-Costa at the Federal University of Rio Grande do Norte, Brazil</b></br>
+I investigated neural coding of hippocampal cells when mice explore two different cages (i.e. place field remapping). I analyzed behavior, spike and LFP data, extending on published results that no remapping occurs in granule dentate gyrus cells. My study unveils spectral and temporal relations between neurons in the hippocampus that supports an ongoing effort to model the dentate gyrus network.
+</p>
+
+<p>
+<b>2014-2015 - Collaboration with Dr. André Bastos (postdoc at MIT), supervised by profs. Martin Usrey and George Mangun (UC Davis)</b></br>
+I used neural recordings from the early visual system and sought to understand the mechanistic origin of oscillations. I developed a neural network model that provided a mechanism for the oscillations generated in V1 but largely absent in the Lateral Geniculate Nucleus (LGN). The results indicate that LGN lacks recurrent connections from excitatory to inhibitory neurons, allowing it to remain asynchronous despite synchronous inputs. My results were presented at SFN 2014 and IBRO 2015.
+</p>
+
+<p>
+<b>2012 - Internship at Prof. Wulfram Gerstner's Lab at École Polytechnique Fédérale de Lausanne (EPFL, Switzerland)</b></br>
+I investigated the modulation of the learning rate, i.e. how much prediction errors affect future predictions, during dynamic probabilistic tasks. I tested policies and update rules for an RL meta-agent that modulated the learning rate of another agent. My system chose the optimal actions, but the meta-agent did not optimally modulate the learning rate. This suggested that Q-learning might not be the underlying modulation mechanism.
+</p>
+
 <h3>Contact:</h3>
-<p>Email: homerobse@gmail.com</p>
-<p>Twitter: https://twitter.com/HomeroEsmeraldo</p>
-<p>LinkedIn: www.linkedin.com/in/homero-esmeraldo</p>
+<p>Email: homerobse@gmail.com</br>
+Twitter: https://twitter.com/HomeroEsmeraldo</br>
+LinkedIn: www.linkedin.com/in/homero-esmeraldo</p>
