Add research keywords, add link tags, add new supervisors

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<h1>Personal webpage of Homero Esmeraldo</h1>
-<img src="homero-garden-2020.jpg" alt="Homero's picture" width="180">
+<h1>Homero Esmeraldo</h1>
+<b>Research interests: </b>Computational Neuroscience, Neural networks, Reinforcement Learning, individual differences</br>
+
+<p><img src="homero-garden-2020.jpg" alt="Homero's picture" width="180"></p>
 <p>Hello, welcome! Here's a brief description of my academic career positions:</p>
 <p><b>September 2020 - present</b></br>
 PhD in Cognitive Science at University of California San Diego, USA.</br>
-Supervisors: Profs. Marcelo Mattar and Terrence Sejnowski</br>
-Topic: Modeling mechanisms and computational principles of hippocampal memory replay
+Supervisors: Profs. Marcelo Mattar, Terry Jernigan, Anders Dale, Terrence Sejnowski</br>
+Topics: Hippocampal memory replay, Individual neurocognitive differences (ABCD study), synaptic plasticity
 </p>
 
 <p><b>2020</b></br>
@@ -35,7 +37,10 @@ I used neural recordings from the early visual system and sought to understand t
 I investigated the modulation of the learning rate, i.e. how much prediction errors affect future predictions, during dynamic probabilistic tasks. I tested policies and update rules for an RL meta-agent that modulated the learning rate of another agent. My system chose the optimal actions, but the meta-agent did not optimally modulate the learning rate. This suggested that Q-learning might not be the underlying modulation mechanism.
 </p>
 
-<h3>Contact:</h3>
-<p>Email: homerobse@gmail.com</br>
-Twitter: https://twitter.com/HomeroEsmeraldo</br>
-LinkedIn: www.linkedin.com/in/homero-esmeraldo</p>
+<h4>Contact:</h4>
+<p>You can reach me at homerobse@gmail.com</p>
+<a href="https://twitter.com/HomeroEsmeraldo">Twitter</a>,
+<a href="https://www.linkedin.com/in/homero-esmeraldo/">LinkedIn</a>, 
+<a href="https://github.com/homerobse/">Github</a></p>
+
+
